force-app/main/default/objects/Test_Execution__c/Test_Execution__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT - An object that represents the execution of a test script in a specific case.</description>
    <label>Test Script Execution</label>
    <nameField>
        <displayFormat>TE-{0}</displayFormat>
        <label>Test Execution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Script Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>