force-app/main/default/objects/Test_Execution__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments on the test execution</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>