force-app/main/default/objects/Test_Execution__c/fields/Description_of_Script__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Script__c</fullName>
    <formula>Test_Script_Description__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description of Script</label>
    <type>Text</type>
</CustomField>