force-app/main/default/objects/Test_Execution__c/fields/Execution_Cycle_Name__c.field-meta.xml
<CustomField>
    <fullName>Execution_Cycle_Name__c</fullName>
    <label>Execution Cycle Name</label>
    <referenceTo>Test_Execution_Cycle__c</referenceTo>
    <relationshipName>Test_Executions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>