force-app/main/default/objects/Test_Execution__c/fields/Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date__c</fullName>
    <description>Date of test execution</description>
    <label>Execution Date</label>
    <type>Date</type>
</CustomField>