force-app/main/default/objects/Test_Execution__c/fields/No_of_Passed_Steps__c.field-meta.xml
<CustomField>
    <fullName>No_of_Passed_Steps__c</fullName>
    <label>No.of Passed Steps</label>
    <summaryFilterItems>
        <field>Test_Execution_Steps__c.Status__c</field>
        <operation>equals</operation>
        <value>Passed</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Execution_Steps__c.Test_Execution_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>