force-app/main/default/objects/Test_Execution__c/fields/No_of_Steps__c.field-meta.xml
<CustomField>
    <fullName>No_of_Steps__c</fullName>
    <label>No.of Steps</label>
    <summaryForeignKey>Test_Execution_Steps__c.Test_Execution_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>