force-app/main/default/objects/Test_Execution__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <formula>Test_Script_Description__r.Request__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request</label>
    <type>Text</type>
</CustomField>