force-app/main/default/objects/Test_Execution__c/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request ID</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Test Script Executions</relationshipLabel>
    <relationshipName>Test_Script_Executions1</relationshipName>
    <type>Lookup</type>
</CustomField>