force-app/main/default/objects/Test_Execution__c/fields/Test_Executor__c.field-meta.xml
<CustomField>
    <fullName>Test_Executor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Executor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Script_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>