force-app/main/default/objects/Test_Execution__c/fields/Test_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Test_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Scenario</label>
    <referenceTo>Test_Scenario__c</referenceTo>
    <relationshipLabel>Test Script Executions</relationshipLabel>
    <relationshipName>Test_Script_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>