force-app/main/default/objects/Test_Execution__c/fields/Test_Script_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Script_Description__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Script ID</label>
    <referenceTo>Test_Script__c</referenceTo>
    <relationshipLabel>Test Script Executions</relationshipLabel>
    <relationshipName>Test_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>